src/envoy-proxy/config/envoy-config.yaml
# Copyright 2023 Dynatrace LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

node:
  cluster: unguard-cluster
  id: unguard

dynamic_resources:
  lds_config:
    path: /etc/envoy/unguard/listener-ds.yaml

static_resources:
  listeners:
    - name: listener_static
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8080
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                use_remote_address: true
                stat_prefix: ingress_http
                access_log:
                  - name: envoy.access_loggers.stdout
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
                      log_format:
                        json_format:
                          content_type: "%REQ(Content-Type)%"
                          downstream_remote_address: "%DOWNSTREAM_REMOTE_ADDRESS%"
                          hostname: "%HOSTNAME%"
                          message: "%LOCAL_REPLY_BODY%"
                          original_path: "%REQ(X-ENVOY-ORIGINAL-PATH?:PATH)%"
                          response_code: "%RESPONSE_CODE%"
                          response_code_details: "%RESPONSE_CODE_DETAILS%"
                          timestamp: "%START_TIME%"
                          upstream_remote_address: "%UPSTREAM_REMOTE_ADDRESS%"
                          user_agent: "%REQ(User-Agent)%"
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                route_config:
                  name: local_route
                  virtual_hosts:
                    - domains:
                        - "*"
                      name: unguard_service
                      routes:
                        - match:
                            path: /
                          redirect:
                            path_redirect: /ui
                            response_code: FOUND
                        - match:
                            prefix: /ui
                          route:
                            cluster: frontend_cluster
                        - match:
                            prefix: /ad-service
                          route:
                            cluster: ad_service_cluster
  clusters:
    - name: frontend_cluster
      dns_lookup_family: V4_ONLY
      type: STRICT_DNS
      load_assignment:
        cluster_name: frontend_cluster
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: unguard-frontend
                      port_value: 80
    - name: ad_service_cluster
      dns_lookup_family: V4_ONLY
      type: STRICT_DNS
      load_assignment:
        cluster_name: ad_service_cluster
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: unguard-ad-service
                      port_value: 80
